--- a/tasks/task1.tex
+++ b/tasks/task1.tex
@@ -2,8 +2,8 @@
 
 \section{Task a}
 
-It can be said that a Binomial distribution can describe “n” independent Bernoulli trials, which can be also written as X ${\sim}$  B(p). We also know that the expectation of a Binomial distribution is \begin{equation}  E [X] = \sum_{k=0}^{n}kP(k)= np \label{task1_a} \end{equation} see ~\cite{Iubh:2021}, pg. 72. \newline
-Therefore, we can calculate the expectation of the Bernoulli distribution for P(vote = "for") = 0.94 where our number of trials is “n=1”. Thus, results in the expectation of our distribution to become “p” i.e., μ = 0.94. From figure \ref{fig:task_1_a} it can be deduced that taking a single sample of voting 94\% of the population will vote for and 6\% will vote against.
+It can be said that a Binomial distribution can describe “n” number of independent Bernoulli trials, which can be also written as X ${\sim}$  B(p). We also know that the expectation of a Binomial distribution is \begin{equation}  E [X] = \sum_{k=0}^{n}kP(k)= np \label{task1_a} \end{equation} (see ~\cite{Iubh:2021}, pg. 72). \newline
+Therefore, we can calculate the expectation of the Bernoulli distribution for P(vote = "for") = 0.94 where our number of trials is “n=1”. This results in the expectation of our distribution to become “p” i.e., μ = 0.94. From figure \ref{fig:task_1_a} it can be deduced that taking a single sample of voting, 94\% of the population will vote for and 6\% will vote against.
 
 \begin{figure}[h!]
 \centering
@@ -38,13 +38,13 @@ plt.savefig('images/task_1_a_matlab.pdf')
 
 \section{Task b}
 
-A Poisson distribution is mainly used to describe discrete random variable X which gives the probability of several independent events observed over a fixed interval of time, i.e., number of people entering a supermarket in a Saturday each hour. \newline
+A Poisson distribution is mainly used to describe discrete random variable X, which gives the probability of several independent events observed over a fixed interval of time, i.e., number of people entering a supermarket in a Saturday each hour. \newline
 The event of meteorites falling on the ocean each year also follows a similar pattern with the supermarket example, where the falling meteorites (discrete independent events) are observed over a year with an expectation ${\lambda}$=12. Since this random event is also observed a certain number of times in a defined time interval, we can say that Poisson is a natural candidate for such a phenomenon.\newline\newline
-In Figure \ref{fig:task_1_b} we can see that the number of meteorites (N) which can fall in a year is chosen to be 22 in the distribution. Looking at the probabilities  \begin{equation} P(X=k)=\frac{\lambda^k e^{-k}}{k!}, k=0,1,2…,  \label{pmf_poission}\end{equation} when k=22 the probability of meteorites falling is less than 0.5 or 0.005. Due to this reason the n=22 is used to depict the distribution. 
+In Figure \ref{fig:task_1_b} we can see that the number of meteorites (k) which can fall in a year is chosen to be 22 in the distribution. Looking at the probabilities  \begin{equation} P(X=k)=\frac{\lambda^k e^{-k}}{k!}, k=0,1,2…,  \label{pmf_poission}\end{equation} when k=22 the probability of meteorites falling is less than 0.5 or 0.005. Due to this reason the k=22 is used to depict the distribution. 
 
 \subsubsection{Median and Variance}
 The variance of a Poisson distribution is given by Var[X]=$\lambda=\sigma^2$ (\cite{hogg:2005}), therefore the variance of this distribution is equal to λ parameter Var[X]=12.
-Likewise, the median can be defined as the mid-point, where 50\% of the samples are either above or below this point. For this we can calculate the value of X whose cumulative sum of the probability is less than 50\%. In this case the median is also 12, which is the same as the median and variance $\lambda$. The calculation of the median or 2nd quartile is done using a for loop see (listing \ref{lst:code_task_1_b} line 21)  with the cumulative sum of the probabilities and the median is stored when a value is found which is greater than 50 is found. The value greater than instead of equal to 50 is checked because it is a discrete distribution and it might not have an exact value at 50\%. Therefore, we can say that for this distribution the mean, median and variance are the same.
+Likewise, the median can be defined as the mid-point, where 50\% of the samples are either above or below this point. For this we can calculate the value of X whose cumulative sum of the probability is less than 50\%. In this case the median is also 12, which is the same as the median and variance $\lambda$. The calculation of the median or 2nd quartile is done using a for loop see (listing \ref{lst:code_task_1_b} line 21)  with the cumulative sum of the probabilities, the median is stored when a value greater than 50 is found. Instead of the value equal to 50, the value greater than is checked because it is a discrete distribution and it might not have an exact value at 50\%. Therefore, we can say that for this distribution the mean, median and variance are the same.
 
 \begin{lstlisting}[caption={Plotting the PMF for Poisson Distribution)},label={lst:code_task_1_b}]
 from scipy.stats import poisson
@@ -105,17 +105,17 @@ plt.savefig('images/task_1_b.pdf')
 \begin{figure}[h!]
 \centering
 \includegraphics[width=\textwidth]{pics/task_1_b.pdf}
-\caption{Poisson Distribution with n = 22 with median and variance}\label{fig:task_1_b}
+\caption{Poisson Distribution with k = 22 with median and variance}\label{fig:task_1_b}
 \end{figure}
 \FloatBarrier
 
 \section{Task c}
 
-Given that Y is a random variable with time to hear an owl, and the probability ones needs to wait to hear the owl after y hours is:
+Given that Y is a random variable with time to hear an owl, the probability one needs to wait to hear the owl after y hours is:
 \begin{equation} \label{eqn:cdf_minus_1}
     P(Y > y) = \frac{7}{9}e^{-0.5y} + \frac{2}{9}e^{-0.25y}
 \end{equation}
-Since the probability given is the probability of hearing the owl after y hours is the complementary cumulative distribution function (CCDF) P(Y $>$ y), the CDF would be 1 minus the equation \ref{eqn:cdf_minus_1} (\cite{Iubh:2021}, pg.89). The CDF is as follows:
+Since the probability given the probability of hearing the owl after y hours, this is the complementary cumulative distribution function (CCDF) P(Y $>$ y), where the CDF would be 1 minus the CCDF (see equation \ref{eqn:cdf_minus_1}). The CDF is as follows (\cite{Iubh:2021}, pg.89):
 \begin{equation} \label{eqn:cdf}
     P(Y\leq y) = F(x) = 1 -(\frac{7}{9}e^{-0.5y} + \frac{2}{9}e^{-0.25y})
 \end{equation}
@@ -151,7 +151,7 @@ The mean μ can be calculated using E[Y]= $\mu$= $\int_{-\infty}^{\infty} yf(y)\
 
 \begin{enumerate}
     \item E[Y] = $\int_{-\infty}^{\infty} yf(y)\,dy$
-    \item E[Y] = $\int_{0}^{\infty} yf(y)\,dy$.  We can change the limits from $-\infty$ to 0 because there exists no value before 0.
+    \item E[Y] = $\int_{0}^{\infty} yf(y)\,dy$.  We can change the limits from $-\infty$ to 0 because no value exists before 0.
     \item E[Y] = $\int_{0}^{\infty} y(\frac{7}{18}e^{-0.5y} + \frac{1}{18}e^{-0.25y})\,dy$.
     \item E[Y] = $\int_{0}^{\infty} \frac{7}{18}ye^{-0.5y} + \int_{0}^{\infty} \frac{1}{18}ye^{-0.25y}\,dy$.
     \item E[Y] = $\int_{0}^{\infty} \frac{7}{18}ye^{-0.5y} + \int_{0}^{\infty} \frac{1}{18}ye^{-0.25y}\,dy$ \label{eqn:mean_line_5}
@@ -165,17 +165,17 @@ Therefore the expectation of the function E[Y]=$\mu$=$2.\overline{44}$. Similarl
 
 \begin{enumerate}
     \item E[$Y^2$] = $\int_{-\infty}^{\infty}y^2f(y)\,dy$
-    \item E[$Y^2$] = $\int_{0}^{\infty} y^2f(y)\,dy$.  We can change the limits from $-\infty$ to 0 because there exists no value before 0.
+    \item E[$Y^2$] = $\int_{0}^{\infty} y^2f(y)\,dy$.  We can change the limits from $-\infty$ to 0 because no value exists before 0.
     \item E[$Y^2$] = $\int_{0}^{\infty} y^2(\frac{7}{18}e^{-0.5y} + \frac{1}{18}e^{-0.25y})\,dy$.
     \item E[$Y^2$] = $\int_{0}^{\infty} \frac{7}{18}y^2e^{-0.5y} + \int_{0}^{\infty} \frac{1}{18}y^2e^{-0.25y}\,dy$.
     \item E[$Y^2$] = $\int_{0}^{\infty} \frac{7}{18}y^2e^{-0.5y} + \int_{0}^{\infty} \frac{1}{18}y^2e^{-0.25y}\,dy$
-    \item E[$Y^2$] = $[\frac{7}{18}(-2y^2e^{-0.5y}+4\int ye^{-0.5y})]_0^\infty + [\frac{1}{18}(-4y^2e^{-0.25y}+8\int ye^{-0.25y})]_0^\infty$ Using integration by parts formula. see above line (\ref{eqn:mean_line_5}), the integration is has been already done in the step and will copy the part here.
+    \item E[$Y^2$] = $[\frac{7}{18}(-2y^2e^{-0.5y}+4\int ye^{-0.5y})]_0^\infty + [\frac{1}{18}(-4y^2e^{-0.25y}+8\int ye^{-0.25y})]_0^\infty$ Using integration by parts formula. see above line (\ref{eqn:mean_line_5}), the integration has been already done in the step and is copied here.
     \item E[$Y^2$] = $[\frac{7}{18}(-2y^2e^{-0.5y} +4(-2ye^{-0.5y}-4e^{-0.5y})]_0^\infty + [\frac{1}{18}(-4y^2e^{-0.25y} +8(-4ye^{-0.25y}-16e^{-0.25y})]_0^\infty$
     \item E[$Y^2$] = $[\frac{7}{18}(\lim_{b\to\infty}(0)-(-2\times 0^2 \times e^{-0.5*0} +4(-2\times0e^{-0.5\times0}-4e^{-0.5\times0})] + [\frac{1}{18}(\lim_{b\to\infty}(0)-(-4\times0^2 \times e^{-0.25*0} )+8(-4\times0 \times e^{-0.25\times 0}-16e^{-0.25*0})]$
     \item E[$Y^2$] = $\frac{7}{18}\times 16 + \frac{1}{18}\times 128 = \frac{40}{3}= 13.33$
     \item Var[Y] = E[$Y^2$] - $\mu^2$ = $13.33 + 2.44^2$ = 19.28 \label{eqn:var_task_1_c}
 \end{enumerate}
-As calculated in line \ref{eqn:var_task_1_c} the variance Var[Y] = 19.28. To find the quartiles one can use again the CDF, and compare it with the value of x using this the Q1(25\%) = $0.\overline{66}$ , Q1(50\%) = 1.6 and Q1(75\%) = $3.28\overline{3}$. Alternatively, one can use the inverse of the CDF $F_{Y}^{-1} (.)=x$ to also find the given quartile.
+As calculated in line \ref{eqn:var_task_1_c} the variance is Var[Y] = 19.28. To find the quartiles one can use the CDF again, and compare it with the value of x using this the Q1(25\%) = $0.\overline{66}$ , Q1(50\%) = 1.6 and Q1(75\%) = $3.28\overline{3}$. Alternatively, one can use the inverse of the CDF $F_{Y}^{-1} (.)=x$ to also find the given quartile.
 
 \begin{figure}[h!]
 \centering
